<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="G_RawSensorData" Id="{b5d41dee-00c8-4896-bc82-04bd4f5a483a}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	bManualModeSelector	AT %I* : BOOL;
	bAutoModeSelector AT %I* : BOOL;
	bOffModeSelector AT %I* : BOOL;
	bStartButton AT %I* : BOOL;
	bStopButton AT %I* : BOOL;
	bJoystickEnable AT %I* : BOOL;
	fFlowWinch AT %I* : LREAL;
	
	
	stJoyX : ST_AnalogInput;
	stJoyY : ST_AnalogInput;
	stPositionCylinder : ST_AnalogInput;
	nEncoderValue AT %I* : UDINT;
	
	stPressureSupply : ST_AnalogInput;
 	stPressureReturn : ST_AnalogInput;
	stPressureCyl_A_PistonSide : ST_AnalogInput;
	stPressureCyl_B_RodSide : ST_AnalogInput;
	stPressureWinch_A_Input : ST_AnalogInput;
	stPressureWinch_A1_Input : ST_AnalogInput;
	stPressureWinch_B_Output : ST_AnalogInput;
	stPressureWinch_B1_Output : ST_AnalogInput;
	stPressureWinchDrain : ST_AnalogInput;
	
	stFlowWinch : ST_AnalogInput; 
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>